Puts variables and functions for colors on scss, adds media queries to make the site responsive

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <section class="hero">
         <section>
             <h1>Hello World</h1>
-            <p>This is an awesome <span class="pink">value</span> proposition <br>for this product.</p>
+            <p>This is an awesome <em>value</em> proposition <br>for this product.</p>
             <a href="#" class="button">Button</a>
         </section>
         
